--- a/package.json
+++ b/package.json
@@ -46,6 +46,7 @@
     "jest": "^29.7.0",
     "jest-environment-jsdom": "^29.7.0",
     "msw": "^2.3.0",
+    "next-router-mock": "^0.9.13",
     "postcss": "^8",
     "tailwindcss": "^3.4.1",
     "ts-jest": "^29.1.2",
