--- a/package.json
+++ b/package.json
@@ -6,7 +6,9 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint"
+    "lint": "next lint",
+    "test": "jest",
+    "test:watch": "jest --watchAll"
   },
   "dependencies": {
     "@hookform/resolvers": "^3.3.4",
@@ -23,12 +25,15 @@
     "date-fns": "^3.6.0",
     "lucide-react": "^0.373.0",
     "next": "14.2.3",
+    "nock": "^13.5.4",
     "react": "^18",
     "react-day-picker": "^8.10.1",
     "react-dom": "^18",
     "react-hook-form": "^7.51.3",
     "tailwind-merge": "^2.3.0",
     "tailwindcss-animate": "^1.0.7",
+    "ts-jest": "^29.1.3",
+    "undici": "^6.18.1",
     "zod": "^3.23.4"
   },
   "devDependencies": {
@@ -38,6 +43,7 @@
     "@types/node": "^20.12.12",
     "@types/react": "^18",
     "@types/react-dom": "^18",
+    "@types/testing-library__jest-dom": "^6.0.0",
     "eslint": "^8",
     "eslint-config-next": "14.2.3",
     "jest": "^29.7.0",
